--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -15,12 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.4 64-bit (conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -43,21 +39,21 @@
     "from zipfile import ZipFile\n",
     "from joblib import dump, load\n",
     "from pprint import pprint\n",
-    "from pandas_profiling import ProfileReport\n",
+    "# from pandas_profiling import ProfileReport\n",
     "from IPython.display import IFrame\n",
     "import random\n",
     "from statistics import mode\n",
     "from datetime import datetime\n",
-    "from scipy.stats import uniform, randint\n",
+    "# from scipy.stats import uniform, randint\n",
     "\n",
     "# SkLearn bits\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.preprocessing import StandardScaler\n",
+    "# from sklearn.model_selection import train_test_split\n",
     "\n",
     "# PyTorch bits\n",
-    "import torch\n",
-    "from torch import nn\n",
-    "from torch.nn import functional as F\n",
+    "# import torch\n",
+    "# from torch import nn\n",
+    "# from torch.nn import functional as F\n",
     "\n",
     "# Autoreload\n",
     "%load_ext autoreload\n",
@@ -66,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,11 +99,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "c:\\Users\\CHMAHONE\\OneDrive - Schenker AG\\Documents\\Git Repos\\BeerPrediction\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"./data/beer_reviews.csv\")"
+    "data = pd.read_csv(\"./data/raw/beer_reviews.csv\")"
    ]
   },
   {
@@ -119,7 +132,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(1586614, 13)\n"
+      "(1586614, 13)\nIndex(['brewery_id', 'brewery_name', 'review_time', 'review_overall',\n       'review_aroma', 'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste', 'beer_name', 'beer_abv',\n       'beer_beerid'],\n      dtype='object')\n"
      ]
     },
     {
@@ -133,7 +146,69 @@
    ],
    "source": [
     "print(data.shape)\n",
+    "print(data.columns)\n",
     "display(data.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Index(['brewery_id', 'brewery_name', 'review_time', 'review_overall',\n       'review_aroma', 'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste', 'beer_name', 'beer_abv',\n       'beer_beerid'],\n      dtype='object')"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "# from pandas_profiling import ProfileReport\n",
+    "\n",
+    "# # Create profile report\n",
+    "# profile = ProfileReport(data, title=\"Profile Report\")\n",
+    "# # Export\n",
+    "# profile.to_file(\"InitialReport.html\")\n",
+    "# # View\n",
+    "# display(profile)\n",
+    "\n",
+    "display(data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1586614,)\n(1586614, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.data.set_data import pop_target\n",
+    "\n",
+    "feat, targ = pop_target(data, \"beer_style\")\n",
+    "\n",
+    "print(targ.shape)\n",
+    "print(feat.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from src.data.set_data import split_data\n",
+    "# feat_trn, feat_tst, targ_trn, targ_tst = split_data(feat, targ, test_size=0.3)\n",
+    "# feat_trn, feat_val, targ_trn, targ_val = split_data(feat_trn, targ_trn, test_size=0.3)\n",
+    "\n",
+    "# [print(data+\": \"+eval(data).shape) for data in [\"feat_trn\", \"targ_trn\", \"feat_val\", \"targ_val\", \"feat_tst\", \"targ_tst\"]]"
    ]
   }
  ]
