--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -116,6 +116,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "if False:\n",
+    "    from src.data.get_data import get_file_data\n",
+    "    get_file_data \\\n",
+    "        ( url=\"https://drive.google.com/u/1/uc?export=download&confirm=G4CX&id=1vYyJL_IB6KjKCxuk9kg4vIMPGTtoX8Ek\"\n",
+    "        , save_path=\"./data/external\"\n",
+    "        , save_name=\"raw_data.zip\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "from src.data.get_data import get_unzip_data\n",
+    "get_unzip_data \\\n",
+    "    ( source_file=\"./data/external/beer_review.zip\"\n",
+    "    , target_dir=\"./data/raw\"\n",
+    "    , delete_source=False\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
