Work on data processing

--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -39,21 +39,21 @@
     "from zipfile import ZipFile\n",
     "from joblib import dump, load\n",
     "from pprint import pprint\n",
-    "# from pandas_profiling import ProfileReport\n",
+    "from pandas_profiling import ProfileReport\n",
     "from IPython.display import IFrame\n",
     "import random\n",
     "from statistics import mode\n",
     "from datetime import datetime\n",
-    "# from scipy.stats import uniform, randint\n",
+    "from scipy.stats import uniform, randint\n",
     "\n",
     "# SkLearn bits\n",
-    "# from sklearn.preprocessing import StandardScaler\n",
-    "# from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# PyTorch bits\n",
-    "# import torch\n",
-    "# from torch import nn\n",
-    "# from torch.nn import functional as F\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.nn import functional as F\n",
     "\n",
     "# Autoreload\n",
     "%load_ext autoreload\n",
@@ -106,7 +106,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "c:\\Users\\CHMAHONE\\OneDrive - Schenker AG\\Documents\\Git Repos\\BeerPrediction\n"
+      "c:\\Users\\chris\\OneDrive\\02 - Education\\07 - MDSI\\09 - ADSI\\07 - GitHub Repo\\BeerPrediction\n"
      ]
     }
    ],
@@ -116,58 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "source": [
-    "if False:\n",
-    "    from src.data.get_data import get_file_data\n",
-    "    get_file_data \\\n",
-    "        ( url=\"https://drive.google.com/u/1/uc?export=download&confirm=G4CX&id=1vYyJL_IB6KjKCxuk9kg4vIMPGTtoX8Ek\"\n",
-    "        , save_path=\"./data/external\"\n",
-    "        , save_name=\"raw_data.zip\"\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "source": [
-    "from src.data.get_data import get_unzip_data\n",
-    "get_unzip_data \\\n",
-    "    ( source_file=\"./data/external/beer_review.zip\"\n",
-    "    , target_dir=\"./data/raw\"\n",
-    "    , delete_source=False\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -203,47 +152,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "Index(['brewery_id', 'brewery_name', 'review_time', 'review_overall',\n       'review_aroma', 'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste', 'beer_name', 'beer_abv',\n       'beer_beerid'],\n      dtype='object')"
-     },
-     "metadata": {}
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from pandas_profiling import ProfileReport\n",
     "\n",
     "# # Create profile report\n",
     "# profile = ProfileReport(data, title=\"Profile Report\")\n",
     "# # Export\n",
-    "# profile.to_file(\"InitialReport.html\")\n",
+    "# profile.to_file(\"./reports/InitialReport.html\")\n",
     "# # View\n",
-    "# display(profile)\n",
-    "\n",
-    "display(data.columns)"
+    "# display(profile)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_upd = data.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(1586614,)\n(1586614, 12)\n"
+      "Index(['brewery_id', 'brewery_name', 'review_time', 'review_overall',\n       'review_aroma', 'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste', 'beer_name', 'beer_abv',\n       'beer_beerid'],\n      dtype='object')\nIndex(['brewery_id', 'brewery_name', 'review_time', 'review_overall',\n       'review_aroma', 'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste', 'beer_name', 'beer_abv',\n       'beer_beerid'],\n      dtype='object')\nIndex(['brewery_name', 'review_time', 'review_overall', 'review_aroma',\n       'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste'],\n      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_upd.columns)\n",
+    "from src.data.set_data import rem_features\n",
+    "data_upd = rem_features(data_upd, [\"brewery_id\",\"beer_beerid\",\"beer_name\",\"beer_abv\",\"beer_beerid\"])\n",
+    "print(data_upd.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1586614,)\n(1586614, 8)\n"
      ]
     }
    ],
    "source": [
     "from src.data.set_data import pop_target\n",
     "\n",
-    "feat, targ = pop_target(data, \"beer_style\")\n",
+    "feat, targ = pop_target(data_upd, \"beer_style\")\n",
     "\n",
     "print(targ.shape)\n",
     "print(feat.shape)"
@@ -251,15 +219,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "feat_trn :  777440 8\ntarg_trn :  777440\nfeat_val :  333189 8\ntarg_val :  333189\nfeat_tst :  475985 8\ntarg_tst :  475985\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None, None]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
    "source": [
-    "# from src.data.set_data import split_data\n",
-    "# feat_trn, feat_tst, targ_trn, targ_tst = split_data(feat, targ, test_size=0.3)\n",
-    "# feat_trn, feat_val, targ_trn, targ_val = split_data(feat_trn, targ_trn, test_size=0.3)\n",
+    "from src.data.set_data import split_data\n",
+    "from src.utils.misc import get_shape\n",
+    "feat_trn, feat_tst, targ_trn, targ_tst = split_data(feat, targ, test_size=0.3)\n",
+    "feat_trn, feat_val, targ_trn, targ_val = split_data(feat_trn, targ_trn, test_size=0.3)\n",
     "\n",
-    "# [print(data+\": \"+eval(data).shape) for data in [\"feat_trn\", \"targ_trn\", \"feat_val\", \"targ_val\", \"feat_tst\", \"targ_tst\"]]"
+    "[print(data, \": \", get_shape(eval(data), True)) for data in [\"feat_trn\", \"targ_trn\", \"feat_val\", \"targ_val\", \"feat_tst\", \"targ_tst\"]]"
    ]
   }
  ]
