--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -10,13 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
+   "display_name": "Python 3.7.6 64-bit ('BeerPrediction': pipenv)",
+   "metadata": {
+    "interpreter": {
+     "hash": "5660fd5c2e0c8dcd4fe7eb8156f0ca786a36e66cc993d16e5aed8e8177f2098a"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -26,7 +30,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "# The usuals\n",
     "import os\n",
@@ -106,7 +118,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "c:\\Users\\chris\\OneDrive\\02 - Education\\07 - MDSI\\09 - ADSI\\07 - GitHub Repo\\BeerPrediction\n"
+      "c:\\Users\\CHMAHONE\\OneDrive - Schenker AG\\Documents\\Git Repos\\BeerPrediction\n"
      ]
     }
    ],
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,34 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Index(['brewery_id', 'brewery_name', 'review_time', 'review_overall',\n       'review_aroma', 'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste', 'beer_name', 'beer_abv',\n       'beer_beerid'],\n      dtype='object')\nIndex(['brewery_id', 'brewery_name', 'review_time', 'review_overall',\n       'review_aroma', 'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste', 'beer_name', 'beer_abv',\n       'beer_beerid'],\n      dtype='object')\nIndex(['brewery_name', 'review_time', 'review_overall', 'review_aroma',\n       'review_appearance', 'review_profilename', 'beer_style',\n       'review_palate', 'review_taste'],\n      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data_upd.columns)\n",
-    "from src.data.set_data import rem_features\n",
-    "data_upd = rem_features(data_upd, [\"brewery_id\",\"beer_beerid\",\"beer_name\",\"beer_abv\",\"beer_beerid\"])\n",
-    "print(data_upd.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(1586614,)\n(1586614, 8)\n"
+      "(1586614,)\n(1586614, 12)\n"
      ]
     }
    ],
@@ -215,6 +207,37 @@
     "\n",
     "print(targ.shape)\n",
     "print(feat.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(1586614, 13)\n['data']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.utils.misc import get_name\n",
+    "\n",
+    "print(data.shape)\n",
+    "print(get_name(data, globals()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.data.set_data import sel_feat_cols\n",
+    "\n",
+    "data_upd = sel_feat_cols(data_upd, [\"brewery_name\",\"review_aroma\",\"review_appearance\",\"review_palate\",\"review_taste\"])"
    ]
   },
   {
