--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -15,10 +15,10 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.6 64-bit ('BeerPrediction': pipenv)",
+   "display_name": "Python 3.7.6 64-bit ('BeerPrediction-i6yarVT4')",
    "metadata": {
     "interpreter": {
-     "hash": "5660fd5c2e0c8dcd4fe7eb8156f0ca786a36e66cc993d16e5aed8e8177f2098a"
+     "hash": "67e95891cef6f763a8da7f4b5ca092810ebeafd793900fd5434b07b31b2d8020"
     }
    }
   }
