--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -693,13 +693,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "OrderedDict([('conv1', Linear(in_features=20, out_features=30, bias=True)),\n             ('relu1', ReLU()),\n             ('conv2', Linear(in_features=30, out_features=40, bias=True)),\n             ('relu2', ReLU())])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "temp = OrderedDict([\n",
+    "    ('conv1', nn.Linear(20,30)),\n",
+    "    ('relu1', nn.ReLU()),\n",
+    "    ('conv2', nn.Linear(30,40)),\n",
+    "    ('relu2', nn.ReLU())\n",
+    "])\n",
+    "\n",
+    "pprint(temp)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate operators\n",
     "crit = nn.CrossEntropyLoss()\n",
-    "optm = torch.optim.Adam(model.parameters(), lr=0.01)"
+    "optm = torch.optim.Adam(model.parameters(), lr=0.01)\n",
+    "sche = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer=optm, mode=\"min\", patience=3)"
    ]
   },
   {
@@ -708,28 +735,169 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_EPOCHS = 50\n",
-    "BATCH_SIZE = 32"
+    "N_EPOCHS = 10\n",
+    "BATCH_SIZE = 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-37-6e34e2dd78a5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN_EPOCHS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mtrain_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_acc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_classification\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_trn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcrit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moptm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mvalid_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalid_acc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_classification\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcrit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\chris\\OneDrive\\02 - Education\\07 - MDSI\\09 - ADSI\\07 - GitHub Repo\\BeerPrediction\\src\\models\\pytorch.py\u001b[0m in \u001b[0;36mtrain_classification\u001b[1;34m(train_data, model, criterion, optimizer, batch_size, device, scheduler, generate_batch)\u001b[0m\n\u001b[0;32m    561\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    562\u001b[0m         \u001b[1;31m# Update Weights\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 563\u001b[1;33m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    564\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    565\u001b[0m         \u001b[1;31m# Calculate global accuracy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\BeerPrediction-i6yarVT4\\lib\\site-packages\\torch\\autograd\\grad_mode.py\u001b[0m in \u001b[0;36mdecorate_context\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[1;32mdef\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 26\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     27\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mcast\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mF\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\BeerPrediction-i6yarVT4\\lib\\site-packages\\torch\\optim\\adam.py\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self, closure)\u001b[0m\n\u001b[0;32m    117\u001b[0m                    \u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'lr'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    118\u001b[0m                    \u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'weight_decay'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 119\u001b[1;33m                    \u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'eps'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    120\u001b[0m                    )\n\u001b[0;32m    121\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\BeerPrediction-i6yarVT4\\lib\\site-packages\\torch\\optim\\functional.py\u001b[0m in \u001b[0;36madam\u001b[1;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, amsgrad, beta1, beta2, lr, weight_decay, eps)\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m         \u001b[1;31m# Decay the first and second moment running average coefficient\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 86\u001b[1;33m         \u001b[0mexp_avg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbeta1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mbeta1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     87\u001b[0m         \u001b[0mexp_avg_sq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbeta2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddcmul_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mbeta2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mamsgrad\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Epoch: 0\n",
+      "\t(train)\t|\tLoss: 0.1434\t|\tAcc: 7.1%\n",
+      "\t(valid)\t|\tLoss: 0.1433\t|\tAcc: 7.4%\n",
+      "Epoch: 1\n",
+      "\t(train)\t|\tLoss: 0.1445\t|\tAcc: 3.7%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 2\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 3\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 4\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 5\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 6\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 7\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 8\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 9\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 10\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 11\n",
+      "\t(train)\t|\tLoss: 0.1446\t|\tAcc: 3.5%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 12\n",
+      "\t(train)\t|\tLoss: 0.1443\t|\tAcc: 4.4%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 13\n",
+      "\t(train)\t|\tLoss: 0.1443\t|\tAcc: 4.2%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 14\n",
+      "\t(train)\t|\tLoss: 0.1444\t|\tAcc: 4.1%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 15\n",
+      "\t(train)\t|\tLoss: 0.1443\t|\tAcc: 4.3%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 16\n",
+      "\t(train)\t|\tLoss: 0.1445\t|\tAcc: 3.7%\n",
+      "\t(valid)\t|\tLoss: 0.1447\t|\tAcc: 3.2%\n",
+      "Epoch: 17\n",
+      "\t(train)\t|\tLoss: 0.1444\t|\tAcc: 4.0%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 18\n",
+      "\t(train)\t|\tLoss: 0.1444\t|\tAcc: 4.1%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 19\n",
+      "\t(train)\t|\tLoss: 0.1444\t|\tAcc: 3.9%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 20\n",
+      "\t(train)\t|\tLoss: 0.1444\t|\tAcc: 3.9%\n",
+      "\t(valid)\t|\tLoss: 0.1446\t|\tAcc: 3.4%\n",
+      "Epoch: 21\n",
+      "\t(train)\t|\tLoss: 0.1443\t|\tAcc: 4.2%\n",
+      "\t(valid)\t|\tLoss: 0.1441\t|\tAcc: 4.9%\n",
+      "Epoch: 22\n",
+      "\t(train)\t|\tLoss: 0.1443\t|\tAcc: 4.3%\n",
+      "\t(valid)\t|\tLoss: 0.1443\t|\tAcc: 4.3%\n",
+      "Epoch: 23\n",
+      "\t(train)\t|\tLoss: 0.1443\t|\tAcc: 4.3%\n",
+      "\t(valid)\t|\tLoss: 0.1443\t|\tAcc: 4.2%\n",
+      "Epoch: 24\n",
+      "\t(train)\t|\tLoss: 0.1443\t|\tAcc: 4.3%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 25\n",
+      "\t(train)\t|\tLoss: 0.1442\t|\tAcc: 4.6%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 26\n",
+      "\t(train)\t|\tLoss: 0.1441\t|\tAcc: 5.0%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 27\n",
+      "\t(train)\t|\tLoss: 0.1442\t|\tAcc: 4.6%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 28\n",
+      "\t(train)\t|\tLoss: 0.1442\t|\tAcc: 4.8%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 29\n",
+      "\t(train)\t|\tLoss: 0.1442\t|\tAcc: 4.7%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 30\n",
+      "\t(train)\t|\tLoss: 0.1441\t|\tAcc: 4.8%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 31\n",
+      "\t(train)\t|\tLoss: 0.1441\t|\tAcc: 5.0%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 32\n",
+      "\t(train)\t|\tLoss: 0.1441\t|\tAcc: 4.8%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 33\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.1%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 34\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.3%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 35\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.3%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 36\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 37\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 38\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 39\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 40\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 41\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 42\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 43\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 44\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 45\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 46\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 47\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 48\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "Epoch: 49\n",
+      "\t(train)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n",
+      "\t(valid)\t|\tLoss: 0.1440\t|\tAcc: 5.4%\n"
      ]
     }
    ],
@@ -750,7 +918,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from src.models.pytorch import train_overall_network\n",
+    "\n",
+    "modl = train_overall_network \\\n",
+    "    ( feat_trn\n",
+    "    , targ_trn\n",
+    "    , feat_val\n",
+    "    , targ_val\n",
+    "    )"
+   ]
   }
  ]
 }
