--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -470,8 +470,8 @@
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "<pandas.io.formats.style.Styler at 0x1580cc2e848>",
-      "text/html": "<style  type=\"text/css\" >\n#T_32996_row0_col0,#T_32996_row0_col1,#T_32996_row1_col0,#T_32996_row1_col1,#T_32996_row2_col0,#T_32996_row2_col1,#T_32996_row3_col0,#T_32996_row3_col1,#T_32996_row4_col0,#T_32996_row4_col1,#T_32996_row5_col0,#T_32996_row5_col1{\n            text-align:  left;\n        }</style><table id=\"T_32996_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >name</th>        <th class=\"col_heading level0 col1\" >shape</th>    </tr></thead><tbody>\n                <tr>\n                        <th id=\"T_32996_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n                        <td id=\"T_32996_row0_col0\" class=\"data row0 col0\" >feat_trn</td>\n                        <td id=\"T_32996_row0_col1\" class=\"data row0 col1\" >777440 x 5</td>\n            </tr>\n            <tr>\n                        <th id=\"T_32996_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n                        <td id=\"T_32996_row1_col0\" class=\"data row1 col0\" >targ_trn</td>\n                        <td id=\"T_32996_row1_col1\" class=\"data row1 col1\" >777440 x 1</td>\n            </tr>\n            <tr>\n                        <th id=\"T_32996_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n                        <td id=\"T_32996_row2_col0\" class=\"data row2 col0\" >feat_val</td>\n                        <td id=\"T_32996_row2_col1\" class=\"data row2 col1\" >333189 x 5</td>\n            </tr>\n            <tr>\n                        <th id=\"T_32996_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n                        <td id=\"T_32996_row3_col0\" class=\"data row3 col0\" >targ_val</td>\n                        <td id=\"T_32996_row3_col1\" class=\"data row3 col1\" >333189 x 1</td>\n            </tr>\n            <tr>\n                        <th id=\"T_32996_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n                        <td id=\"T_32996_row4_col0\" class=\"data row4 col0\" >feat_tst</td>\n                        <td id=\"T_32996_row4_col1\" class=\"data row4 col1\" >475985 x 5</td>\n            </tr>\n            <tr>\n                        <th id=\"T_32996_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n                        <td id=\"T_32996_row5_col0\" class=\"data row5 col0\" >targ_tst</td>\n                        <td id=\"T_32996_row5_col1\" class=\"data row5 col1\" >475985 x 1</td>\n            </tr>\n    </tbody></table>"
+      "text/plain": "<pandas.io.formats.style.Styler at 0x145353fdd48>",
+      "text/html": "<style  type=\"text/css\" >\n#T_bde7e_row0_col0,#T_bde7e_row0_col1,#T_bde7e_row1_col0,#T_bde7e_row1_col1,#T_bde7e_row2_col0,#T_bde7e_row2_col1,#T_bde7e_row3_col0,#T_bde7e_row3_col1,#T_bde7e_row4_col0,#T_bde7e_row4_col1,#T_bde7e_row5_col0,#T_bde7e_row5_col1{\n            text-align:  left;\n        }</style><table id=\"T_bde7e_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >name</th>        <th class=\"col_heading level0 col1\" >shape</th>    </tr></thead><tbody>\n                <tr>\n                        <th id=\"T_bde7e_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n                        <td id=\"T_bde7e_row0_col0\" class=\"data row0 col0\" >feat_trn</td>\n                        <td id=\"T_bde7e_row0_col1\" class=\"data row0 col1\" >777440 x 5</td>\n            </tr>\n            <tr>\n                        <th id=\"T_bde7e_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n                        <td id=\"T_bde7e_row1_col0\" class=\"data row1 col0\" >targ_trn</td>\n                        <td id=\"T_bde7e_row1_col1\" class=\"data row1 col1\" >777440 x 1</td>\n            </tr>\n            <tr>\n                        <th id=\"T_bde7e_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n                        <td id=\"T_bde7e_row2_col0\" class=\"data row2 col0\" >feat_val</td>\n                        <td id=\"T_bde7e_row2_col1\" class=\"data row2 col1\" >333189 x 5</td>\n            </tr>\n            <tr>\n                        <th id=\"T_bde7e_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n                        <td id=\"T_bde7e_row3_col0\" class=\"data row3 col0\" >targ_val</td>\n                        <td id=\"T_bde7e_row3_col1\" class=\"data row3 col1\" >333189 x 1</td>\n            </tr>\n            <tr>\n                        <th id=\"T_bde7e_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n                        <td id=\"T_bde7e_row4_col0\" class=\"data row4 col0\" >feat_tst</td>\n                        <td id=\"T_bde7e_row4_col1\" class=\"data row4 col1\" >475985 x 5</td>\n            </tr>\n            <tr>\n                        <th id=\"T_bde7e_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n                        <td id=\"T_bde7e_row5_col0\" class=\"data row5 col0\" >targ_tst</td>\n                        <td id=\"T_bde7e_row5_col1\" class=\"data row5 col1\" >475985 x 1</td>\n            </tr>\n    </tbody></table>"
      },
      "metadata": {}
     }
@@ -631,6 +631,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models.pytorch import model_set\n",
+    "\n",
+    "# \n",
+    "modl = model_set \\\n",
+    "    ( first_shape=feat_trn.shape[1]\n",
+    "    , hidden_shapes=[10,20,40,80,100]\n",
+    "    , hidden_acti=nn.ReLU()\n",
+    "    , final_shape=len(set(targ_trn))\n",
+    "    , final_acti=nn.Softmax(dim=1)\n",
+    "    , dropout=0.2\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (shap_frst): Linear(in_features=5, out_features=10, bias=True)\n",
+       "  (acti_frst): ReLU()\n",
+       "  (regl_frst): Dropout(p=0.2, inplace=False)\n",
+       "  (shap_01): Linear(in_features=10, out_features=20, bias=True)\n",
+       "  (acti_01): ReLU()\n",
+       "  (regl_01): Dropout(p=0.2, inplace=False)\n",
+       "  (shap_02): Linear(in_features=20, out_features=40, bias=True)\n",
+       "  (acti_02): ReLU()\n",
+       "  (regl_02): Dropout(p=0.2, inplace=False)\n",
+       "  (shap_03): Linear(in_features=40, out_features=80, bias=True)\n",
+       "  (acti_03): ReLU()\n",
+       "  (regl_03): Dropout(p=0.2, inplace=False)\n",
+       "  (shap_04): Linear(in_features=80, out_features=100, bias=True)\n",
+       "  (acti_04): ReLU()\n",
+       "  (regl_04): Dropout(p=0.2, inplace=False)\n",
+       "  (shap_finl): Linear(in_features=100, out_features=104, bias=True)\n",
+       "  (acti_finl): Softmax(dim=1)\n",
+       ")"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "source": [
+    "from src.models.pytorch import get_device\n",
+    "\n",
+    "# Push to device\n",
+    "modl.to(get_device())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
@@ -639,6 +699,32 @@
     "\n",
     "# Instantiate model\n",
     "model = Net(feat_trn.shape[1], len(set(targ_trn)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models.pytorch import get_device\n",
+    "\n",
+    "# Push to device\n",
+    "device = get_device()\n",
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models.pytorch import get_device\n",
+    "\n",
+    "# Push to device\n",
+    "device = get_device()\n",
+    "model.to(device)"
    ]
   },
   {
