Add first version of Pipeline

--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -372,6 +372,62 @@
   },
   {
    "source": [
+    "### Construct Pipelines"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "# Import transformers\n",
+    "si = load(\"./models/encoders/si_handle_nan_brewery_name.joblib\")\n",
+    "oe = load(\"./models/encoders/oe_numericify_brewery_name.joblib\")\n",
+    "sc = load(\"./models/encoders/sc_scale_features.joblib\")\n",
+    "\n",
+    "# `SimpleImputer` for `NaN` values\n",
+    "nan_transformer = Pipeline(\n",
+    "    steps=[\n",
+    "        # (\"simple_imputer\", SimpleImputer(missing_values=np.nan, strategy=\"constant\", fill_value=\"Other\"))\n",
+    "        (\"simple_imputer\", si)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# `OrdinalEncoder` for `brewery_name`\n",
+    "cat_transformer = Pipeline(\n",
+    "    steps=[\n",
+    "        # (\"ordinal_encoder\", OrdinalEncoder())\n",
+    "        (\"ordinal_encoder\", oe)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# `StandardScaler` for numeric cols\n",
+    "num_transformer = Pipeline(\n",
+    "    steps=[\n",
+    "        # (\"standard_scaler\", StandardScaler())\n",
+    "        (\"standard_scaler\", sc)\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Preprocessor to do everything\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers= \\\n",
+    "        [ (\"nan_cols\", nan_transformer, [\"brewery_name\"])\n",
+    "        , (\"cat_cols\", cat_transformer, [\"brewery_name\"])\n",
+    "        , (\"num_cols\", num_transformer, [\"brewery_name\",\"review_aroma\",\"review_appearance\",\"review_palate\",\"review_taste\"])\n",
+    "        ]\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "source": [
     "### Pop the Target"
    ],
    "cell_type": "markdown",
