Update Pandas alignment

--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -65,7 +65,7 @@
     "%load_ext autoreload\n",
     "\n",
     "# Pandas header\n",
-    "pd.set_option(\"display.colheader_justify\",\"right\")"
+    "pd.set_option(\"display.colheader_justify\",\"left\")"
    ]
   },
   {
