--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -1213,6 +1213,41 @@
     "test_loss, test_acc = test_classification(data_tst, model=modl, criterion=crit, batch_size=BATCH_SIZE, device=device)\n",
     "print(f'\\tLoss: {test_loss:.4f}\\t|\\tAccuracy: {test_acc:.1f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Net(\n  (fc1): Linear(in_features=5, out_features=10, bias=True)\n  (fc2): Linear(in_features=10, out_features=50, bias=True)\n  (fc3): Linear(in_features=50, out_features=100, bias=True)\n  (out): Linear(in_features=100, out_features=104, bias=True)\n  (softmax): Softmax(dim=1)\n)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(modl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Net(\n  (fc1): Linear(in_features=5, out_features=10, bias=True)\n  (fc2): Linear(in_features=10, out_features=50, bias=True)\n  (fc3): Linear(in_features=50, out_features=100, bias=True)\n  (out): Linear(in_features=100, out_features=104, bias=True)\n  (softmax): Softmax(dim=1)\n)\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = modl.to(device)\n",
+    "print(info)"
+   ]
   }
  ]
 }
